--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -2,6 +2,6 @@
 <resources>
     <string name="app_name">gotochef</string>
     <string name="title_activity_main">gotochef</string>
-    <string name="package_name">io.gotochef</string>
-    <string name="custom_url_scheme">io.gotochef</string>
+    <string name="package_name">io.gotochef.app</string>
+    <string name="custom_url_scheme">io.gotochef.app</string>
 </resources>
